--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "start": "node index.js"
   },
   "author": "G",
@@ -15,5 +15,17 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.8"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "chai": "^4.3.4",
+    "jest": "^26.6.3",
+    "mocha": "^8.4.0",
+    "superagent": "^6.1.0",
+    "supertest": "^6.1.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
