--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest",
     "start": "node index.js"
   },
   "author": "G",
   "license": "ISC",
   "dependencies": {
+    "@shelf/jest-mongodb": "^1.2.4",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -19,13 +20,12 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "chai": "^4.3.4",
     "jest": "^26.6.3",
-    "mocha": "^8.4.0",
     "superagent": "^6.1.0",
     "supertest": "^6.1.3"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "preset": "@shelf/jest-mongodb"
   }
 }
